--- a/README
+++ b/README
@@ -1,5 +1,19 @@
+# On the host
 * Build the docker image
 ~ docker build -t strontium/strontium .
 
 * Run the generated image
-~ docker run -it strontium/strontium
+~ docker run -it --device=/dev/ttyUSB0 strontium/strontium
+
+# In the docker container
+* Compile strontium
+~ cd /strontium
+~ make
+
+* if the kernel is not yet on the sdcard (TODO)
+ Create a fat16 partition
+ Copy kernel.img to the new partition
+
+* Upload the image using raspbootcom
+~ make run
+
